<resources>
    <!-- Standard Strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="toolbar_about_string">Version 1.0, by Tryton Van Meer</string>

    <!-- activity_start-->
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="startChatButton">Start Chat</string>
    <string name="startWeatherButton">Check Weather</string>
    <string name="startTestToolbarButton">Test Toolbar</string>

    <!-- activity_login-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_message">Login</string>
    <string name="login_name_message">Login Name</string>
    <string name="password_message">Password</string>

    <!-- activity_list_items-->
    <string name="switch_message">Enable Something</string>
    <string name="dialog_message">Are You Done?</string>
    <string name="dialog_title"> </string>

    <!-- activity_chat_window -->
    <string name="chat_input_text">Enter Text</string>
    <string name="chat_send_button">Send</string>

    <!-- activity_weather_forecast -->
    <string name="weather_image_desc">Weather Icon</string>
    <string name="hint_current_temp">Current Temperature</string>
    <string name="hint_max_temp">Max Temperature</string>
    <string name="hint_min_temp">Min Temperature</string>

    <!-- fragment_message_layout -->
    <string name="message_detail_msg">Message:</string>
    <string name="message_detail_id">ID:</string>
    <string name="message_detail_btn">DELETE THIS MESSAGE</string>

    <!-- activity_test_toolbar -->
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_toolbar_menu_title_one">Add</string>
    <string name="test_toolbar_menu_title_two">Delete</string>
    <string name="test_toolbar_menu_title_three">Edit</string>
    <string name="test_toolbar_menu_title_about">About</string>
    <string name="test_toolbar_action_two_dialog_title">Do you want to go back?</string>
    <string name="test_toolbar_action_three_dialog_edittext">New Message</string>
    <string name="test_toolbar_action_three_dialog_edittext_label">Enter A New Message</string>
</resources>
